@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.21==========
+2025-
+1. listbox添加清空功能
+*2. 基于TinUILight, TinUIDark的Dialog附加样式类
+3. spinbox回车时，如果输入数据符合条件，则触发回调函数
+
 ==========5.20==========
 2025-3-1
 1. 修复listview清空或删除视图后页面元素仍占用内存的问题
